<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvFoodLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/food"
        app:layout_constraintBottom_toBottomOf="@id/etFoodEntry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <EditText
        android:id="@+id/etFoodEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.247"
        app:layout_constraintStart_toEndOf="@+id/tvCalorieLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCalorieLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calorie"
        app:layout_constraintStart_toStartOf="@id/tvFoodLabel"
        app:layout_constraintTop_toBottomOf="@+id/etFoodEntry" />

    <EditText
        android:id="@+id/etCaloriesEntry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:hint="@string/enter_calories"
        android:inputType="number"
        android:maxLength="5"
        app:layout_constraintStart_toEndOf="@+id/tvCalorieLabel"
        app:layout_constraintTop_toTopOf="@+id/tvCalorieLabel" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/record_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCaloriesEntry" />


</androidx.constraintlayout.widget.ConstraintLayout>